added sections needed

--- a/textfile_based/engine.conf
+++ b/textfile_based/engine.conf
@@ -1,40 +1,45 @@
+[FORENSICS]
+#File name must be: Forensic_Question#.txt and located in the "report location"
+#report location is currently: /home/cpstudent/Desktop/
+#Forensic1 = dog
+
 [CRONTASK]
-cpstudent = nc
+root = backdoor
 
 [PROGRAM]
-remove = netcat,medusa,hydra,ncrack
-respos = Security,http://security.ubuntu.com/ubuntu
+remove = netcat
+#respos = Security,http://security.ubuntu.com/ubuntu
 kernel = 4.8.00
 autoupdates
 
 [REMOVEUSERS]
-rupert
-bobbob
+baduser1
+baduser2
 
 [ADDUSERS]
-test
-test2
+guduser1
+guduser2
+
+[PASSWORDCHANGE]
+#change# = user,hash
+change1 = guduser3,$ZNZRfxMMdmfcMJ0
+change2 = toguduser,$Qg81luXN1Su1c
 
 
 [USERSETTINGS]
-#changepassword# = user,hash
-changepassword1 = cpstudent,Hvqln
-changepassword2 = pazrax,Vzhen
 HiddenRoot
 DisableGuest
 
 [GROUPS]
-groupadd1 = pazrax,sudo
-groupadd2 = cpstudent,sudo
-GroupRemove1 = eve,sudo
-groupremove2 = brad,sudo
-groupremove3 = billy,sudo
+groupadd1 = gudusr1,sudo
+GroupRemove1 = badusr1,sudo
+groupremove2 = badguy,adm
 
 [FIREWALL]
 FirewallStatus
-AcceptRule = 22,443
+#AcceptRule = 22,443
 #Not sure why we need a rule to deny but you can check for it!
-DROPRULE = 80,21
+#DROPRULE = 80,21
 
 [CONSOLE]
 disablectrlaltdel
@@ -46,14 +51,23 @@ history
 policy
 
 #change to remove file and add different types: malware,media,PII
-[MALWARE]
-#name, file_path
-malware1 = .virus.py,/home/
-malware2 = firewall.py,/etc/
+[BADFILE]
+#type, name, file_path
+#types: Malware, PII, MediaFile, (anything?)
+#file1 = Malware,.virus.py,/home/
+#file2 = MediaFile,rocksong.mp3,/home/cpstudent/
+#file3 = Persinal Information,customers.csv,/home/guduser3/
 
 [CRITSERVICE]
-#apache_security
-#php_security
-#waf_check
+apache
+php
+waf
 #ssh_security
 #samba_security
+
+[WORDPRESS]
+update = 4.9
+plugin1 = dolly,1.0
+plugin2 = dark-mode,1.3
+theme1 = clean-commerce,1.1
+theme2 = twentyfifteen,1.9
